<resources>
    <string name="app_name">Automation</string>
    <string name="UpdateAppName">automation_mobile</string>

    <string name="reTry">تلاش مجدد …</string>
    <string name="ML_PleaseEnterPhoneNumber">شماره تلفن همراه خود را در کادر زیر وارد نمایید</string>
    <string name="hint_PhoneNumber">شماره تلفن همراه</string>
    <string name="getVerifyCode">دریافت کد ورود</string>
    <string name="EnterVerify">لطفا شش رقم کد ورود را وارد نمایید</string>
    <string name="cancel">بیخیال</string>
    <string name="elapsedTimeGetSMS">زمان باقی مانده جهت دریافت پیامک</string>
    <string name="reTryGetSMS">دریافت مجدد</string>
    <string name="newVersionIsAvailable">نسخه جدید برنامه در دسترس می باشد. تا بارگیری کامل فایل شکیبا باشید</string>
    <string name="changePicture">تغییر عکس</string>
    <string name="nameLastName">نام و نام خانوادگی</string>
    <string name="PowerOff">قدرت گرفته از</string>
    <string name="BounceNegra">نگرا</string>
    <string name="arrivalTimeToday">ساعت ورود امروز</string>
    <string name="departureTimeToday">ساعت خروج امروز</string>
    <string name="workVacations">مرخصی ها</string>
    <string name="newWorkVacation">درخواست مرخصی</string>
    <string name="missions">ماموریت ها</string>
    <string name="changeAttendanceTime">تغییر ساعت</string>
    <string name="changeArrivalTime">تغییر ساعت ورود</string>
    <string name="changeDepartureTime">تغییر ساعت خروج</string>
    <string name="legalReceipt">فیش حقوقی</string>
    <string name="doubleExit">"برای خروج 2 بار کلیک کنید"</string>
    <string name="Home">خانه</string>
    <string name="description">توضیحات</string>
    <string name="reports">گزارش ها</string>
    <string name="functionalityReport">گزارش عملکرد</string>

    <string name="noItemForShow">هیچ موردی برای نمایش وجود ندارد</string>

    <string name="errorEmptyTextPhoneNumber">شماره تلفن همراه خود را وارد نمایید</string>
    <string name="errorEmptyWorkVacationType">نوع مرخصی را انتخاب نمایید</string>
    <string name="errorEmptySubstitute">جانشین را انتخاب نمایید</string>

    <string name="errorEmptyStartDate">تاریخ شروع را انتخاب نمایید</string>
    <string name="errorEmptyStartTime">ساعت شروع را انتخاب نمایید</string>
    <string name="errorEmptyEndDate">تاریخ پایان را انتخاب نمایید</string>
    <string name="errorEmptyEndTime">ساعت پایان را انتخاب نمایید</string>


    <string name="workVacationType">نوع مرخصی</string>
    <string name="chooseWorkVacationType">انتخاب نوع مرخصی</string>
    <string name="searchWorkVacationType">جستجوی نوع مرخصی</string>

    <string name="substitute">جانشین</string>
    <string name="chooseSubstitute">انتخاب جانشین</string>
    <string name="searchSubstitute">جستجوی جانشین</string>

    <string name="date">تاریخ</string>

    <string name="startTime">ساعت شروع</string>
    <string name="endTime">ساعت پایان</string>
    <string name="startDate">تاریخ شروع</string>
    <string name="endDate">تاریخ پایان</string>
    <string name="chooseStartDate">انتخاب تاریخ شروع</string>
    <string name="chooseStartTime">انتخاب ساعت شروع</string>
    <string name="chooseEndDate">انتخاب تاریخ پایان</string>
    <string name="chooseEndTime">انتخاب ساعت پایان</string>
    <string name="sendRequest">ارسال در خواست</string>
    <string name="searchHint">جستجو</string>
    <string name="choose">انتخاب</string>


    <string name="arrivalDate">تاریخ ورود</string>
    <string name="departureDate">تاریخ خروج</string>
    <string name="arrivalTime">ساعت ورود</string>
    <string name="departureTime">ساعت خروج</string>
    <string name="chooseArrivalDate">انتخاب تاریخ ورود</string>
    <string name="chooseDepartureDate">انتخاب تاریخ خروج</string>
    <string name="chooseArrivalTime">انتخاب ساعت ورود</string>
    <string name="chooseDepartureTime">انتخاب ساعت خروج</string>


    <string name="errorEmptyArrivalDate">تاریخ ورود را انتخاب نمایید</string>
    <string name="errorEmptyArrivalTime">ساعت ورود را انتخاب نمایید</string>
    <string name="errorEmptyDepartureDate">تاریخ خروج را انتخاب نمایید</string>
    <string name="errorEmptyDepartureTime">ساعت خروج را انتخاب نمایید</string>


    <string name="mainWork">کار اصلی</string>
    <string name="leave">مرخصی</string>
    <string name="mission">ماموریت</string>
    <string name="absenceOfWork">غیبت</string>
    <string name="lackOfWork">کسر کار</string>
    <string name="overWorkPayTime">اضافه کاری</string>
    <string name="holidayPayTime">تعطیل کاری</string>
    <string name="nightPayTime">شب کاری</string>
    
    <string name="createDate">تاریخ ثبت</string>
    <string name="state">وضعیت</string>
    <string name="pending">در انتظار</string>
    <string name="canceled">رد شده</string>
    <string name="accepted">تایید شده</string>

    <string name="edit">ویرایش</string>

    //______________________________________________________________________________________________
    <string name="ML_PersonalCode">PersonalCode</string>
    <string name="ML_SharePreferences">SharePreferences</string>
    <string name="ML_AccessToken">AccessToken</string>
    <string name="ML_Expires">Expires</string>
    <string name="ML_PhoneNumber">ML_PhoneNumber</string>
    <string name="ML_Verified">ML_Verified</string>
    <string name="ML_TokenType">TokenType</string>
    <string name="ML_ExpireSin">ExpireSin</string>
    <string name="ML_ClientId">ClientId</string>
    <string name="ML_Issued">Issued</string>
    <string name="ML_RefreshToken">RefreshToken</string>
    <string name="ML_Name">ML_Name</string>
    <string name="ML_lastName">ML_lastName</string>
    <string name="ML_Gender">ML_Gender</string>
    <string name="ML_EditTime">ML_EditTime</string>


</resources>