<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="login"
            type="ir.ngra.automation.viewmodels.VM_Login" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:gravity="center">

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/enter_code"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/ML_Border"
                android:textSize="@dimen/_11sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:text="@string/ML_PleaseEnterPhoneNumber"/>



            <ir.mlcode.latifiarchitecturelibrary.customs.ML_EditText
                android:id="@+id/ml_EditTextPersonalCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/_130sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                app:editTextColor="@color/ML_EditText"
                app:emptyBack="@drawable/dw_edit_empty"
                app:normalBack="@drawable/dw_edit_normal"
                app:editHint="@string/hint_PhoneNumber"
                app:text="@={login.phoneNumber}"
                app:textSize="@dimen/_12sdp"
                app:delimiterWidth="@dimen/_2sdp"
                app:delimiterBack="@drawable/dw_delimiter"
                app:delimiter_marginBottom="@dimen/_1sdp"
                app:delimiter_marginTop="@dimen/_1sdp"
                app:delimiter_marginLeft="@dimen/_6sdp"
                app:delimiter_marginRight="@dimen/_6sdp"
                app:image_height="@dimen/_18sdp"
                app:image_width="@dimen/_18sdp"
                app:image_src="@drawable/ic_name"
                app:image_tint="@color/colorPrimaryDark"
                app:inputTypeEdit="number"
                app:textMaxLine="1"
                app:textMaxLength="11"
                app:editSplitter="false"
                app:validationType="mobile"
                app:fontFamily="@font/vazir_normal"
                />


            <ir.mlcode.latifiarchitecturelibrary.customs.ML_Button
                android:id="@+id/ml_ButtonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:connectBack="@drawable/dw_button_normal"
                app:textValue="@string/getVerifyCode"
                app:textValueSize="@dimen/_13sdp"
                app:textColor="@color/mlWhite"
                app:img_src="@drawable/ic_mobile_message"
                app:img_height="@dimen/_20sdp"
                app:img_width="@dimen/_20sdp"
                app:img_tint="@color/mlWhite"
                app:gif_src="@drawable/gif_clock"
                app:waitBack="@drawable/dw_button_wait"
                app:waitText="@string/cancel"
                app:fontFamily="@font/vazir_light"
                />



        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
