<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="editTime"
            type="ir.ngra.automation.viewmodels.VM_NewEditTime" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:padding="@dimen/_7sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_10sdp">


            <ir.mlcode.latifiarchitecturelibrary.customs.ML_EditText
                android:id="@+id/ml_EditTextArrivalDate"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                app:delimiterBack="@drawable/dw_delimiter"
                app:delimiterWidth="@dimen/_2sdp"
                app:delimiter_marginLeft="@dimen/_5sdp"
                app:delimiter_marginRight="@dimen/_5sdp"
                app:editHint="@string/chooseArrivalDate"
                app:editSplitter="false"
                app:editTextColor="@color/ML_EditText"
                app:editable="false"
                app:emptyBack="@drawable/dw_edit_empty"
                app:fontFamily="@font/vazir_normal"
                app:image_height="@dimen/_20sdp"
                app:image_src="@drawable/ic_calendar_start"
                app:image_tint="@color/colorAccent"
                app:image_width="@dimen/_20sdp"
                app:inputTypeEdit="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:normalBack="@drawable/dw_edit_normal"
                app:textMaxLine="2"
                app:textSize="@dimen/_11sdp"
                app:validationType="text" />


            <ir.mlcode.latifiarchitecturelibrary.customs.ML_EditText
                android:id="@+id/ml_EditTextArrivalTime"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                app:delimiterBack="@drawable/dw_delimiter"
                app:delimiterWidth="@dimen/_2sdp"
                app:delimiter_marginLeft="@dimen/_5sdp"
                app:delimiter_marginRight="@dimen/_5sdp"
                app:editHint="@string/chooseArrivalTime"
                app:editSplitter="false"
                app:editTextColor="@color/ML_EditText"
                app:editable="false"
                app:emptyBack="@drawable/dw_edit_empty"
                app:fontFamily="@font/vazir_normal"
                app:image_height="@dimen/_20sdp"
                app:image_src="@drawable/ic_time_start"
                app:image_tint="@color/colorAccent"
                app:image_width="@dimen/_20sdp"
                app:inputTypeEdit="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ml_EditTextArrivalDate"
                app:normalBack="@drawable/dw_edit_normal"
                app:textMaxLine="2"
                app:textSize="@dimen/_11sdp"
                app:validationType="text" />


            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/ML_delimiter"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ml_EditTextArrivalTime" />


            <ir.mlcode.latifiarchitecturelibrary.customs.ML_EditText
                android:id="@+id/ml_EditTextDepartureDate"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                app:delimiterBack="@drawable/dw_delimiter"
                app:delimiterWidth="@dimen/_2sdp"
                app:delimiter_marginLeft="@dimen/_5sdp"
                app:delimiter_marginRight="@dimen/_5sdp"
                app:editHint="@string/chooseDepartureDate"
                app:editSplitter="false"
                app:editTextColor="@color/ML_EditText"
                app:editable="false"
                app:emptyBack="@drawable/dw_edit_empty"
                app:fontFamily="@font/vazir_normal"
                app:image_height="@dimen/_20sdp"
                app:image_src="@drawable/ic_calendar_end"
                app:image_tint="@color/colorAccent"
                app:image_width="@dimen/_20sdp"
                app:inputTypeEdit="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
                app:normalBack="@drawable/dw_edit_normal"
                app:textMaxLine="2"
                app:textSize="@dimen/_11sdp"
                app:validationType="text" />


            <ir.mlcode.latifiarchitecturelibrary.customs.ML_EditText
                android:id="@+id/ml_EditTextDepartureTime"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                app:delimiterBack="@drawable/dw_delimiter"
                app:delimiterWidth="@dimen/_2sdp"
                app:delimiter_marginLeft="@dimen/_5sdp"
                app:delimiter_marginRight="@dimen/_5sdp"
                app:editHint="@string/chooseDepartureTime"
                app:editSplitter="false"
                app:editTextColor="@color/ML_EditText"
                app:editable="false"
                app:emptyBack="@drawable/dw_edit_empty"
                app:fontFamily="@font/vazir_normal"
                app:image_height="@dimen/_20sdp"
                app:image_src="@drawable/ic_time_end"
                app:image_tint="@color/colorAccent"
                app:image_width="@dimen/_20sdp"
                app:inputTypeEdit="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ml_EditTextDepartureDate"
                app:normalBack="@drawable/dw_edit_normal"
                app:textMaxLine="2"
                app:textSize="@dimen/_11sdp"
                app:validationType="text" />


            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/ML_delimiter"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ml_EditTextDepartureTime" />


            <ir.mlcode.latifiarchitecturelibrary.customs.ML_EditText
                android:id="@+id/ml_EditTextDescription"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                app:delimiterBack="@drawable/dw_delimiter"
                app:delimiterWidth="@dimen/_2sdp"
                app:delimiter_marginLeft="@dimen/_5sdp"
                app:delimiter_marginRight="@dimen/_5sdp"
                app:editHint="@string/description"
                app:editSplitter="false"
                app:editTextColor="@color/ML_EditText"
                app:editable="true"
                app:emptyBack="@drawable/dw_edit_empty"
                app:fontFamily="@font/vazir_normal"
                app:image_height="@dimen/_20sdp"
                app:image_src="@drawable/ic_blogging"
                app:image_tint="@color/colorAccent"
                app:image_width="@dimen/_20sdp"
                app:inputTypeEdit="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
                app:normalBack="@drawable/dw_edit_normal"
                app:text="@={editTime.description}"
                app:textGravity="right"
                app:textMaxLength="100"
                app:textMaxLine="2"
                app:textSize="@dimen/_11sdp" />


            <ir.mlcode.latifiarchitecturelibrary.customs.ML_Button
                android:id="@+id/ml_ButtonSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:connectBack="@drawable/dw_button_normal"
                app:fontFamily="@font/vazir_normal"
                app:gif_src="@drawable/gif_clock"
                app:img_height="@dimen/_18sdp"
                app:img_src="@drawable/ic_checked"
                app:img_tint="@color/mlWhite"
                app:img_width="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ml_EditTextDescription"
                app:textColor="@color/mlWhite"
                app:textValue="@string/sendRequest"
                app:textValueSize="@dimen/_12sdp"
                app:waitBack="@drawable/dw_button_wait"
                app:waitText="@string/cancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>
